# mcp-notes-server

./: README.md  pyproject.toml  requirements.txt
examples/: better_test_client.py  client_example.py
src/: notes_server.py
