[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-notes-server"
version = "0.1.0"
description = "A simple MCP server for managing notes"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "mcp>=0.3.0",
]
requires-python = ">=3.8"

[project.scripts]
notes-server = "src.notes_server:main"